22 Feb 2009 svn revision 903
[ David Bruce <davidstuartbruce@gmail.com> ]
        - lots of general code cleanup to eliminate most of the compiler warnings, 
          including removal of remaining incorrect uses of "unsigned char".
        - addition of "make dist_with_fonts_bzip2" target to help support OpenSUSE
          build service integration.
        - beginning of VERSIOM "1.7.4.preview"
        - cleanup of alphabet.c with addition of pointer safety checks and fix of 
          "off-by-one" drawing error in fourth row of keyboard hints graphic.

08 Feb 2009 
[ David Bruce <davidstuartbruce@gmail.com> ]
        - cleanup of wchar_t <--> UTF-8 conversion wrapper functions. These are now
          based on GNU iconv and are in their own file, convert_utf.h/c.  They now
          take a length parameter for safety against buffer overflows. The Unicode, Inc.
          implementations in ConvertUTF.h/c have been removed.


03 Feb 2009 - svn revision 856
Version 1.7.3
[ David Bruce <davidstuartbruce@gmail.com> ]
        - updated LoadFont() to include the hard-coded hackery for all of the
          bundled fonts.  Also, (IMPORTANT), now the function attempts to load
          the default font if it fails to load the desired font, instead of 
          just segfaulting.  An appropriate message is printed to stderr.
        - fix to ConvertToUTF8() to support correct behavior on MacOSX
        - fix to top-level Makefile.am because a file was going into $prefix/doc/PACKAGE
          rather than the correct $prefix/share/doc/PACKAGE

14 Jan 2009 - svn revision 856
[ David Bruce <davidstuartbruce@gmail.com> ]
        - fixed SetupPaths() - really, the correct path should _always_ be 
          DATA_PREFIX, and SetupPaths() should just confirm that and check for
          the theme data path under it.  There should be no need for the hard-
          coded choices, which were just covering up the mistake.


14 Jan 2009 - svn revision 844

Version 1.7.2