@@ -1,3 +1,7 @@
+03 Mar 2009 (svn.debian.org/tux4kids - revision 923)
+[ David Bruce <davidstuartbruce@gmail.com> ]
+        - Text drawing -
+
 22 Feb 2009 svn revision 903
 [ David Bruce <davidstuartbruce@gmail.com> ]
         - lots of general code cleanup to eliminate most of the compiler warnings, 
